--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -155,9 +155,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:backgroundTint="#EB5E28"
-            android:text="Добавить тренировку"
-            android:textColor="#FFFFFF"
-            />
+            android:text="Добавить упражнение"
+            android:textColor="#FFFFFF" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/training_list"
