--- a/app/src/main/res/layout/training_list.xml
+++ b/app/src/main/res/layout/training_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,21 +8,46 @@
     android:fitsSystemWindows="true"
     tools:context=".TrainingListActivity">
 
+    <!-- RecyclerView для списка тренировок -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/training_list"
-        android:layout_width="match_parent"
-        android:layout_height="648dp"
+        android:layout_width="391dp"
+        android:layout_height="575dp"
         android:layout_marginTop="50dp"
-        android:layout_weight="1" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- TextView для отображения общего времени тренировки -->
     <TextView
         android:id="@+id/total_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
         android:text="Общее время тренировки: 0 мин"
         android:textColor="#FFFCF2"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <!-- Кнопка внизу экрана -->
+    <Button
+        android:id="@+id/button"
+        android:layout_width="283dp"
+        android:layout_height="68dp"
+        android:backgroundTint="#EB5E28"
+        android:text="Создать тренировку"
+        android:textColor="#FFFFFF"
+        android:textColorLink="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.463"
+        app:layout_constraintStart_toStartOf="@+id/training_list"
+        app:layout_constraintTop_toBottomOf="@+id/training_list"
+        app:layout_constraintVertical_bias="0.482" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
