--- a/app/src/main/res/layout/stats.xml
+++ b/app/src/main/res/layout/stats.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/statistics_layout"
     android:layout_width="match_parent"
@@ -16,6 +17,17 @@
         android:textColor="#FFFCF2"
         android:textSize="24sp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/no_stats_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="32dp"
+        android:text="Нет данных о тренировках"
+        android:textColor="#FFFCF2"
+        android:textSize="18sp"
+        android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/statistics_recycler"
